# column-store-solution

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  workload_gen_server
RUM_Visual_Front_bak/: README.md  app.js  costcal.py  package.json  run_vis
RUM_Visual_Front_bak/data/: dataTest.json
RUM_Visual_Front_bak/public/javascripts/: RUMTriangle.js  bar_chart.js  brushMap.js  brushMap_helper.js  communication.js  communicationCopy.js  heatmap_original.js  kde_original.js
RUM_Visual_Front_bak/public/stylesheets/: style.css
RUM_Visual_Front_bak/routes/: index.js
RUM_Visual_Front_bak/views/: brushzoom4new.html  data5.csv  index.ejs  index0311.html  index0318.ejs
data/: dataGen.py  ddl  gen.cfg  testGen.py  workGen.py  workload10000
data/dataset1/: dbinfo  foo.tb1.Z
include/: cmdsocket.h  column.h  common.h  config.h  config.h.in  config.h.in~  cs165_api.h  darray.h  db.h  dsl.h  fileparser.h  index.h  message.h  parser.h  query.h  rum_demo_server.h  table.h  utils.h
project_tests/: dsltest.txt
some-other-structures/btreeCompare/: binarySearch.c  binarySearch.h  k_ary_tree.c  k_ary_tree.h  run4tests  test  testBinary.c  treesearch.c  treesearch.h
some-other-structures/csvparse/: dataset  oldparse.c  parse  parse.c
some-other-structures/customizedQSort/: custom_qsort.c  custom_qsort.h  run  test.c
some-other-structures/nWayPartition/: README.md  nWayPartition.c
some-other-structures/serverConnection/backend/: server.c  server.h
some-other-structures/serverConnection/frontend/: middleware.js
some-other-structures/serverConnection/frontend/public/: index.html
some-other-structures/serverConnection/frontend/public/js/: browser.js
src/: Makefile  README.md  client.c  column.c  column.h  db.c  db.h  dbinfo  dsl.c  filename  fileparser.c  fileparser.h  foo.t1.b  parser.c  query.c  query.h  result.c  server.c  table.bak.c  table.c  table.h  utils.c
src/client/: client.c
src/cmdsocket/: cmdsocket.c
src/darray/: darray.c
src/database/: column.c  db.c  dsl.c  fileparser.c  index.c  parser.c  query.c  table.c
src/frequencymodel/: data_structures.h  dummy_partition.h  frequency_model.c  frequency_model.h  partition_data.c  partition_data.h
src/frequencymodel/customsort/: custom_comparators.c  custom_comparators.h  custom_sort.c  custom_sort.h  custom_swappers.c  custom_swappers.h
src/include/: cs165_api.h  dsl.h  message.h  utils.h
src/server/: rum_demo_server.c  server.c
src/util/: utils.c
testtool/: dataGen.py  dataGen_dbinfo.py  gen.cfg  workGen.py
